# potential-doodle

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BOT_CHECKLIST.md  CONTRIBUTING.md  Dockerfile.builder  Dockerfile.runtime  IMPLEMENTATION.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md
.github/workflows/: ci.yml
containers/: Dockerfile  Podmanfile  lxc-config.yaml
docs/: README.md  STRUCTURE.md  cicd.md  configuration.md  containers.md  getting-started.md  index.md
scripts/: publish_images.sh  run_all.sh  run_pipeline.sh  setup.sh  validate_structure.sh
src/: README.md  __init__.py
src/app/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_example.py  test_placeholder.py
