[tool.poetry]
name = "django-ci-cd-app"
version = "0.1.0"
description = "Django application with containerized CI/CD pipeline"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
django-redis = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
mypy = "^1.5.0"
bandit = "^1.7.5"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
