[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Enterprise-grade CI/CD template for Django with containerized pipeline"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "==4.2.5"
psycopg2-binary = "==2.9.9"
redis = "==5.0.1"
gunicorn = "==21.2.0"

[tool.poetry.dev-dependencies]
pytest = "==7.4.0"
pytest-django = "==4.7.0"
coverage = "==7.2.7"
flake8 = "==6.1.0"
black = "==23.9.1"
isort = "==5.12.0"
pylint = "==3.0.2"
pydocstyle = "==6.3.0"
mypy = "==1.5.1"
bandit = "==1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"
